--- a/picklesjar.brine-jvm/brine.ut/pom.xml
+++ b/picklesjar.brine-jvm/brine.ut/pom.xml
@@ -10,12 +10,13 @@
 	<parent>
 		<groupId>picklesjar</groupId>
 		<artifactId>picklesjar.brine-jvm</artifactId>
-		<version>${project.version}</version>
+		<version>0.1.1</version>
 	</parent>
 	<artifactId>brine.ut</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
+		<project.version>0.1.1</project.version>
 	</properties>
 
 	<build>
@@ -34,6 +35,21 @@
 	</reporting>
 
 	<dependencies>
+		
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
